footer icon changes

--- a/style.css
+++ b/style.css
@@ -278,6 +278,7 @@ body {
   height: auto;
   width: 100%;
   max-width: 46px;
+  margin-right: 15px;
 }
 .footer .right-footer .footer-content-contact-icons .contact-text-heading {
   display: block;
